--- a/src/assets/css/serviceCrousel.css
+++ b/src/assets/css/serviceCrousel.css
@@ -49,7 +49,6 @@ body {
 
 /* Main Content */
 .main-content {
-  padding: 32px 0;
   overflow-y: auto;
 }
 
